--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
       --inputBg:#0c0e10;
       --inputLine:rgba(255,255,255,.14);
-      --inputText:#eef3ff;
-      --inputPh:rgba(238,243,255,.45);
+      --inputText:#ffffff;                 /* ★ (1) 입력 글자 흰색 */
+      --inputPh:rgba(255,255,255,.45);
 
       --topbarH:72px; /* JS가 실제 높이로 업데이트 */
     }
@@ -48,16 +48,16 @@
     .topbar{
       flex:0 0 auto;
       position:sticky; top:0; z-index:6000;
-      background:linear-gradient(180deg, rgba(12,13,14,.98), rgba(12,13,14,.85));
+      background:#0c0d0e;                  /* ★ (2) 완전 불투명 */
       border-bottom:1px solid var(--line);
-      padding:20px 16px; /* 공간은 유지 */
+      padding:20px 16px;
       display:flex;
       align-items:center;
       justify-content:space-between;
       gap:12px;
     }
     .titleLeft{
-      font-size:26px;      /* ★ 30 → 26 (3~4pt 다운) */
+      font-size:26px;
       font-weight:1000;
       letter-spacing:.2px;
       color:#e9eef7;
@@ -82,10 +82,9 @@
     .filtersRow{
       flex:0 0 auto;
       position:sticky;
-      top:var(--topbarH);        /* ★ JS로 정확히 맞춤 → 공백/겹침 제거 */
+      top:var(--topbarH);
       z-index:5500;
-      background:rgba(12,13,14,.92);
-      backdrop-filter: blur(6px);
+      background:#0c0d0e;                  /* ★ (2) 완전 불투명: 리스트 비침 차단 */
       border-bottom:1px solid var(--line);
       padding:12px 16px;
     }
@@ -97,18 +96,19 @@
       justify-content:flex-start;
       max-width:1100px;
     }
+
     input[type="text"], select{
       height:40px;
       padding:0 12px;
       border-radius:12px;
       border:1px solid var(--inputLine);
       background:var(--inputBg);
-      color:var(--inputText);
+      color:var(--inputText);              /* ★ (1) 입력 글자 흰색 */
       outline:none;
       font-size:14px;
     }
     input[type="text"]::placeholder{color:var(--inputPh)}
-    option{background:#0c0e10; color:#eef3ff;}
+    option{background:#0c0e10; color:#ffffff;}
     .q{ width:min(420px, 92vw); }
     .cat{ width:260px; }
     .btn{
@@ -146,7 +146,7 @@
       background:var(--panel);
       border-right:1px solid var(--line);
       overflow:auto;
-      padding:14px;
+      padding:0;                           /* ★ (2) panel padding 제거(허공/비침 줄이기) */
       min-height:0;
     }
     @media (max-width: 980px){
@@ -165,18 +165,17 @@
       position:sticky;
       top:0;
       z-index:4000;
-      margin-bottom:12px;
-      padding:12px;
+      margin:0;                            /* ★ (2) 위쪽 빈 공간 제거 */
+      padding:12px 14px 12px;
       display:flex;
       gap:10px;
       flex-wrap:wrap;
       align-items:center;
       justify-content:flex-start;
-      border-radius:var(--radius);
-      background:rgba(10,12,14,.98); /* ★ 더 진하게 → 뒤 비침 감소 */
-      border:1px solid rgba(255,255,255,.10);
+      border-radius:0;                     /* ★ (2) 패널 상단에 딱 붙게 */
+      background:#0b0c0d;                  /* ★ (2) 완전 불투명 */
+      border-bottom:1px solid rgba(255,255,255,.10);
       box-shadow:0 10px 28px rgba(0,0,0,.35);
-      backdrop-filter: blur(6px);
     }
     .sPill{
       display:inline-flex; gap:8px; align-items:center;
@@ -191,7 +190,7 @@
     .sPill b{color:var(--mint); font-weight:1000}
 
     /* ===== LIST ===== */
-    .listWrap{padding:12px;}
+    .listWrap{padding:14px;}               /* 카드 안쪽 패딩은 유지 */
     .listHeader{
       display:flex; align-items:baseline; justify-content:space-between;
       gap:10px; margin-bottom:10px;
@@ -282,7 +281,6 @@
     .marker-cluster-large{ background-color: rgba(35, 205, 158, 0.35) !important; }
     .marker-cluster-large div{ background-color: rgba(35, 205, 158, 0.70) !important; color:#062b23 !important; font-weight:1000 !important; }
 
-    /* ★ 클러스터 하이라이트(호버/리스트 연동) */
     .clusterHighlight{
       outline: 3px solid rgba(162,222,204,.75);
       outline-offset: 2px;
@@ -296,10 +294,10 @@
       background:rgba(0,0,0,.60);
       display:none;
       z-index:99999;
-      padding:16px;
+      padding:20px;                        /* 약간 여유 */
     }
     .detail{
-      width:min(1060px, 96vw);
+      width:min(1400px, 92vw);            /* ★ (3) 모달 폭 확대 */
       max-height:92vh;
       overflow:auto;
       margin:0 auto;
@@ -317,10 +315,10 @@
       gap:12px;
       z-index:2;
     }
-    .detailHead .t{font-weight:1000;color:#e9eef7;font-size:20px;margin:0;}
+    .detailHead .t{font-weight:1000;color:#e9eef7;font-size:22px;margin:0;}
     .detailHead .s{color:var(--muted);font-size:12px;line-height:1.4;margin-top:4px;}
     .x{
-      width:40px; height:40px;
+      width:44px; height:44px;
       border-radius:12px;
       border:1px solid rgba(255,255,255,.12);
       background:rgba(255,255,255,.06);
@@ -329,9 +327,9 @@
       font-weight:1000;
     }
     .detailBody{
-      padding:14px 16px 18px;
+      padding:16px 16px 18px;
       display:grid;
-      grid-template-columns: 1.2fr 1fr;
+      grid-template-columns: 1.35fr 1fr;  /* ★ (3) 넓어진 폭에 맞춰 이미지 비중 확대 */
       gap:14px;
     }
     @media (max-width: 920px){ .detailBody{grid-template-columns:1fr;} }
@@ -675,7 +673,6 @@
     const m = markerByKey.get(key);
     if (!m || !markers) return;
 
-    // visible parent가 marker면: 마커 하이라이트
     const parent = markers.getVisibleParent(m);
     if (!parent) return;
 
@@ -685,7 +682,6 @@
       return;
     }
 
-    // clustered 상태면: 해당 클러스터 DOM 하이라이트
     if (parent && typeof parent.getElement === "function"){
       highlightClusterElement(parent.getElement());
     }
@@ -706,7 +702,7 @@
       attribution: '&copy; OpenStreetMap contributors'
     }).addTo(map);
 
-    rebuildClusterGroup(); // 최초 1회
+    rebuildClusterGroup();
     map.on("moveend", () => render(false));
   }
 
@@ -722,7 +718,6 @@
       maxClusterRadius: 52
     });
 
-    // ★ 클러스터 hover → 리스트 하이라이트 + 첫 카드로 스크롤
     markers.on("clustermouseover", (e) => {
       try{
         const childMarkers = e.layer.getAllChildMarkers();
@@ -752,7 +747,6 @@
   }
 
   function renderMarkers(items){
-    // ★ 핵심: 매번 클러스터 그룹을 재생성해서 “숫자 갱신 100% 강제”
     rebuildClusterGroup();
     clearMarkers();
 
