--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
       --inputBg:#0c0e10;
       --inputLine:rgba(255,255,255,.14);
-      --inputText:#ffffff;
+      --inputText:#ffffff;                 /* ★ (1) 입력 글자 흰색 */
       --inputPh:rgba(255,255,255,.45);
 
       --topbarH:72px; /* JS가 실제 높이로 업데이트 */
@@ -44,11 +44,11 @@
       min-height:0;
     }
 
-    /* ===== TOPBAR ===== */
+    /* ===== TOPBAR: 좌측 정렬 + 세로 중앙 ===== */
     .topbar{
       flex:0 0 auto;
       position:sticky; top:0; z-index:6000;
-      background:#0c0d0e;
+      background:#0c0d0e;                  /* ★ (2) 완전 불투명 */
       border-bottom:1px solid var(--line);
       padding:20px 16px;
       display:flex;
@@ -84,7 +84,7 @@
       position:sticky;
       top:var(--topbarH);
       z-index:5500;
-      background:#0c0d0e;
+      background:#0c0d0e;                  /* ★ (2) 완전 불투명: 리스트 비침 차단 */
       border-bottom:1px solid var(--line);
       padding:12px 16px;
     }
@@ -103,7 +103,7 @@
       border-radius:12px;
       border:1px solid var(--inputLine);
       background:var(--inputBg);
-      color:var(--inputText);
+      color:var(--inputText);              /* ★ (1) 입력 글자 흰색 */
       outline:none;
       font-size:14px;
     }
@@ -124,14 +124,14 @@
       font-size:13px;
     }
 
-    /* ===== (A) 검색 입력 텍스트 흰색 "확정" ===== */
-    #q{
-      color:#fff !important;
-      caret-color:#fff !important;
+    /* ===== (1) 검색 입력 텍스트 흰색 강제 (우선순위 충돌 방지) ===== */
+    #q{ color:#fff !important; caret-color:#fff !important; }
+    #q::placeholder{ color:rgba(255,255,255,.45) !important; }
+    #q:-webkit-autofill{
       -webkit-text-fill-color:#fff !important;
-    }
-    #q::placeholder{
-      color:rgba(255,255,255,.45) !important;
+      caret-color:#fff !important;
+      box-shadow:0 0 0 1000px var(--inputBg) inset !important;
+      border:1px solid var(--inputLine) !important;
     }
 
     /* ===== APP LAYOUT ===== */
@@ -156,7 +156,7 @@
       background:var(--panel);
       border-right:1px solid var(--line);
       overflow:auto;
-      padding:0;
+      padding:0;                           /* ★ (2) panel padding 제거(허공/비침 줄이기) */
       min-height:0;
     }
     @media (max-width: 980px){
@@ -175,15 +175,15 @@
       position:sticky;
       top:0;
       z-index:4000;
-      margin:0;
+      margin:0;                            /* ★ (2) 위쪽 빈 공간 제거 */
       padding:12px 14px 12px;
       display:flex;
       gap:10px;
       flex-wrap:wrap;
       align-items:center;
       justify-content:flex-start;
-      border-radius:0;
-      background:#0b0c0d;
+      border-radius:0;                     /* ★ (2) 패널 상단에 딱 붙게 */
+      background:#0b0c0d;                  /* ★ (2) 완전 불투명 */
       border-bottom:1px solid rgba(255,255,255,.10);
       box-shadow:0 10px 28px rgba(0,0,0,.35);
     }
@@ -200,7 +200,7 @@
     .sPill b{color:var(--mint); font-weight:1000}
 
     /* ===== LIST ===== */
-    .listWrap{padding:14px;}
+    .listWrap{padding:14px;}               /* 카드 안쪽 패딩은 유지 */
     .listHeader{
       display:flex; align-items:baseline; justify-content:space-between;
       gap:10px; margin-bottom:10px;
@@ -298,40 +298,26 @@
       box-shadow: 0 0 0 2px rgba(162,222,204,.25), 0 10px 24px rgba(0,0,0,.35);
     }
 
-    /* ===== (B) DETAIL OVERLAY: 모달 가로/세로 크게 ===== */
+    /* ===== DETAIL OVERLAY ===== */
     .detailOverlay{
       position:fixed; inset:0;
       background:rgba(0,0,0,.60);
       display:none;
       z-index:99999;
-
-      /* 요청 반영 */
-      padding:12px;
-      align-items:center;
-      justify-content:center;
+      padding:20px;                        /* 약간 여유 */
     }
-    .detailOverlay.isOpen{ display:flex; }
-
     .detail{
-      /* 요청 반영: 거의 화면 꽉 */
-      width:min(1600px, 96vw);
-      height:min(92vh, 920px);
-      max-height:92vh;
-
+      width:min(1600px, 96vw);             /* ★ (3) 모달 폭 더 확대 */
+      height:min(92vh, 920px);             /* ★ (3) 모달 세로 체감 2배 */
+      max-height:min(92vh, 920px);         /* 안정적으로 제한 */
+      overflow:auto;
       margin:0 auto;
       border-radius:18px;
       border:1px solid rgba(255,255,255,.12);
       background:linear-gradient(180deg, rgba(16,18,20,.98), rgba(10,12,14,.94));
       box-shadow:0 22px 60px rgba(0,0,0,.65);
-
-      /* 핵심: 세로 체감 크게 만들기 */
-      display:flex;
-      flex-direction:column;
-      overflow:hidden; /* 내부에서만 스크롤 */
     }
-
     .detailHead{
-      flex:0 0 auto;
       position:sticky; top:0;
       background:rgba(16,18,20,.96);
       border-bottom:1px solid rgba(255,255,255,.08);
@@ -350,39 +336,27 @@
       color:#fff;
       cursor:pointer;
       font-weight:1000;
-      flex:0 0 auto;
     }
-
     .detailBody{
-      /* 요청 반영 */
-      flex:1 1 auto;
-      min-height:0;
-      overflow:auto;
-
       padding:16px 16px 18px;
       display:grid;
-      grid-template-columns: 1.25fr 1fr;
+      grid-template-columns: 1.35fr 1fr;  /* ★ (3) 넓어진 폭에 맞춰 이미지 비중 확대 */
       gap:14px;
     }
     @media (max-width: 920px){ .detailBody{grid-template-columns:1fr;} }
-
     .dimg{
       border-radius:16px;
       overflow:hidden;
       border:1px solid rgba(255,255,255,.10);
       background:#0d0f10;
-
-      /* 요청 반영: aspect-ratio 제거 + 고정 높이 */
-      aspect-ratio:auto;
-      height:min(52vh, 520px);
+      aspect-ratio:auto;                   /* ★ (3) 고정 비율 해제 */
+      height:min(52vh, 520px);             /* ★ (3) 이미지 영역 height로 크게 */
     }
     @media (max-width: 920px){
-      .dimg{ height:min(40vh, 420px); }
+      .dimg{ height:min(46vh, 460px); }
     }
-
     .dimg img{width:100%;height:100%;object-fit:cover;display:block;}
     .dimg .fallback{width:100%;height:100%;display:flex;align-items:center;justify-content:center;color:rgba(255,255,255,.35);font-weight:1000;font-size:12px;}
-
     .info{
       border:1px solid rgba(255,255,255,.08);
       border-radius:14px;
@@ -519,11 +493,7 @@
 
   let highlightedClusterEl = null;
 
-  /* ===== 성능용 상태: 필터 결과(base)는 저장하고, moveend에서는 리스트만 갱신 ===== */
-  let currentBase = []; // 검색/카테고리 반영된 "전체(지도용)" 목록
-
   const $ = (id) => document.getElementById(id);
-
   function addOption(sel, value, label){
     const o = document.createElement("option");
     o.value = value;
@@ -747,16 +717,11 @@
       attribution: '&copy; OpenStreetMap contributors'
     }).addTo(map);
 
-    buildClusterGroupOnce();
-
-    /* ===== 성능: moveend에서는 "리스트(inView)만" 갱신 ===== */
-    map.on("moveend", () => updateInViewAndList());
-
-    // 초기 1회
-    updateInViewAndList();
+    rebuildClusterGroup();
+    map.on("moveend", () => render(false));
   }
 
-  function buildClusterGroupOnce(){
+  function rebuildClusterGroup(){
     if (markers){
       map.removeLayer(markers);
     }
@@ -771,7 +736,9 @@
     markers.on("clustermouseover", (e) => {
       try{
         const childMarkers = e.layer.getAllChildMarkers();
-        const keys = childMarkers.map(mm => mm.__key).filter(Boolean);
+        const keys = childMarkers
+          .map(mm => mm.__key)
+          .filter(Boolean);
 
         clearAllCardHighlights();
         if (keys.length){
@@ -794,8 +761,8 @@
     markers.clearLayers();
   }
 
-  /* ===== 마커는 "필터/검색 변경 시에만" 재구성 ===== */
   function renderMarkers(items){
+    rebuildClusterGroup();
     clearMarkers();
 
     const ms = [];
@@ -858,17 +825,14 @@
       <a href="${google}" target="_blank" rel="noopener">구글맵</a>
     `;
 
-    const ov = $("dOverlay");
-    ov.classList.add("isOpen");
-
+    $("dOverlay").style.display = "block";
     map.setView([it.lat, it.lng], Math.max(map.getZoom(), 15));
 
     if (sethash) setHash(it._key);
   }
 
   function closeDetail(fromHashChange){
-    const ov = $("dOverlay");
-    ov.classList.remove("isOpen");
+    $("dOverlay").style.display = "none";
     currentOpenKey = null;
     if (!fromHashChange) clearHash();
   }
@@ -876,7 +840,7 @@
   function openDetailByHash(){
     if (!location.hash.startsWith("#item=")) return;
     const key = decodeURIComponent(location.hash.replace("#item=", ""));
-    if (currentOpenKey === key && $("dOverlay").classList.contains("isOpen")) return;
+    if (currentOpenKey === key && $("dOverlay").style.display === "block") return;
 
     const it = ALL.find(x => x._key === key);
     if (!it) return;
@@ -958,39 +922,27 @@
     }, { passive:true });
   }
 
-  /* ===== 핵심: moveend에서는 여기만 호출 ===== */
-  function updateInViewAndList(){
-    if (!map) return;
+  function render(shouldFit){
+    const base = getFilteredBase();
 
-    // 모달 열려 있을 때, 필터 결과에서 사라지면 닫기(기존 동작 유지)
     if (currentOpenKey){
-      const exists = currentBase.some(x => x._key === currentOpenKey);
+      const exists = base.some(x => x._key === currentOpenKey);
       if (!exists) closeDetail(false);
     }
 
     const b = map.getBounds();
-    const inView = currentBase.filter(x => b.contains([x.lat, x.lng]));
+    const inView = base.filter(x => b.contains([x.lat, x.lng]));
     curInView = inView;
 
     $("mAll").textContent = ALL.length;
-    $("mFilter").textContent = currentBase.length;
+    $("mFilter").textContent = base.length;
     $("mInView").textContent = inView.length;
 
+    renderMarkers(base);
     renderList(inView);
-  }
 
-  /* ===== 필터/검색 변경 시에만: base 갱신 + 마커 재구성 + 리스트 갱신 ===== */
-  function applyFilterAndMaybeFit(shouldFit){
-    currentBase = getFilteredBase();
-
-    // 마커/클러스터 재구성은 여기서만 수행
-    renderMarkers(currentBase);
-
-    // 리스트(inView) 갱신
-    updateInViewAndList();
-
-    if (shouldFit && currentBase.length){
-      const bb = boundsOf(currentBase);
+    if (shouldFit && base.length){
+      const bb = boundsOf(base);
       if (bb) map.fitBounds(bb, { padding:[60,60], maxZoom: 14 });
     }
   }
@@ -1023,16 +975,15 @@
 
     setCatHighOptions();
 
-    $("catHigh").addEventListener("change", () => applyFilterAndMaybeFit(true));
-    $("q").addEventListener("input", () => debounce(()=>applyFilterAndMaybeFit(true), 220));
-    $("q").addEventListener("keydown", (e)=>{ if (e.key === "Enter") applyFilterAndMaybeFit(true); });
+    $("catHigh").addEventListener("change", () => render(true));
+    $("q").addEventListener("input", () => debounce(()=>render(true), 220));
+    $("q").addEventListener("keydown", (e)=>{ if (e.key === "Enter") render(true); });
 
     $("reset").addEventListener("click", () => {
       $("q").value = "";
       $("catHigh").value = "";
       closeDetail(false);
-      applyFilterAndMaybeFit(true);
-      $("q").focus();
+      render(true);
     });
 
     $("dx").addEventListener("click", () => closeDetail(false));
@@ -1048,8 +999,7 @@
       }
     });
 
-    // 최초 1회: base + 마커 + 리스트
-    applyFilterAndMaybeFit(false);
+    render(false);
     openDetailByHash();
   }
 
